tests/nstst/errors/InvalidConfig.php
<?php
/**
 * @package axy\errors
 */

namespace axy\errors\tests\nstst\errors;

class InvalidConfig extends \axy\errors\InvalidConfig implements Error
{
}
